@@ -42,6 +42,7 @@
 
 // include <commctrl.h> "properly"
 #include "wx/msw/wrapcctl.h"
+#include "wx/msw/wrapshl.h"
 
 #if wxUSE_TOOLTIPS
     #include "wx/tooltip.h"
@@ -417,8 +418,14 @@ bool wxComboBox::Create(wxWindow *parent, wxWindowID id,
     // edit control, we must subclass it as well
     if ( !(style & wxCB_READONLY) )
     {
-        gs_wndprocEdit = wxSetWindowProc((HWND)GetEditHWND(),
-                                         wxComboEditWndProc);
+        const HWND hwndEdit = (HWND)GetEditHWND();
+
+        gs_wndprocEdit = wxSetWindowProc(hwndEdit, wxComboEditWndProc);
+
+        if ( style & wxCB_FILENAME )
+        {
+            wxEnableFileNameAutoComplete(hwndEdit);
+        }
     }
 
     // and finally, show the control
